Fix atspi_accessible_get_index_in_parent when the parent is not cached

Atspi_accessible_get_index_in_parent was returning -1 if the object's
parent is NULL, regardless of whether the accessible_parent field is
currently valid.

https://bugzilla.gnome.org/show_bug.cgi?id=688057